--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
-        This is a web page
+        <h1>
+            This is a web page
+        </h1>
+        <img src="images/white-horse-g1ad116527_1920.jpg" alt="White horse">
     </body>
 </html>
